# boccodex

./: .dockerignore  .gitignore  AGENTS.md  BRIEF.md  DEPLOY.md  DESIGN.md  Dockerfile.backend  Dockerfile.frontend  README.md  SAMPLE_QUESTIONS.md  docker-compose.dev.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  railway.json
backend/data/: README.md  extra-sources.md  manifest.json  trusted_sources.json
backend/data/career_readiness/: accounting-unibocconi-eu.md  aidaf-ey-unibocconi-eu.md  almalaurea-it-sintesi-condizione-occupazionale-laureati-2023.md  almalaurea-it-sintesi-condizione-occupazionale-laureati-2024.md  artlab-unibocconi-eu.md  baffi-unibocconi-eu.md  bafficarefin-unibocconi-eu.md  bayeslab-unibocconi-eu.md  belss-unibocconi-eu.md  bidsa-unibocconi-eu.md  blest-unibocconi-eu.md  built-unibocconi-eu.md  cail-unibocconi-eu.md  cergas-unibocconi-eu.md  clean-unibocconi-eu.md  covidcrisislab-unibocconi-eu.md  cs-unibocconi-eu.md  dec-unibocconi-eu.md  didattica-unibocconi-eu-ts-index-php.md  dmi-unibocconi-eu.md  dondena-unibocconi-eu.md  economics-unibocconi-eu.md  finance-unibocconi-eu.md  fintechlab-unibocconi-eu.md  genderlab-unibocconi-eu.md  green-unibocconi-eu.md  icrios-unibocconi-eu.md  iep-unibocconi-eu.md  igier-unibocconi-eu.md  ius-unibocconi-eu.md  jobmarket-unibocconi-eu.md  leap-unibocconi-eu.md  marketing-unibocconi-eu.md  matematica-unibocconi-eu.md  mgmt-tech-unibocconi-eu.md  (+858 more)
backend/scripts/: add_external_sources.py  bench_e2e.py  benchmark_10_boundary.py  rebuild_manifest.py  trusted_sources_agent.py
(+741 files in other folders)
