[project]
name = "backend"
version = "0.1.0"
description = "Bocconi AI Buddy - backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Essential to run the backend and call OpenAI
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "pydantic>=2.13",
    "openai>=2.33",
    # Add the libraries you need below.
    # Suggestions (uncomment to use):
    #
    # Env loader (recommended for reading OPENAI_API_KEY from .env):
    # "python-dotenv>=1.2",
    #
    # RAG framework:
    # "llama-index>=0.12",
    # "langchain>=0.3",
    # "langchain-openai>=0.2",
    #
    # Vector store:
    # "faiss-cpu>=1.8",
    # "chromadb>=0.5",
    # "sqlite-vec>=0.1",
    #
    # Postgres + pgvector (production-grade pattern with DB):
    # "psycopg[binary]>=3.2",
    # "pgvector>=0.3",
    # "sqlalchemy>=2.0",
]
